--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
-  <title> Perfil de links sociais</title>
+  <title> Perfis de links sociais</title>
 
   
 </head>
